# island

./: .appveyor.yml  .clang-format  .clangformat  .gitignore  .gitmodules  .personaltypes.py  .travis.yml  Architecture.org  CMakeLists.txt  CMakeLists.txt.glm  CMakeLists.txt.imgui  CMakeLists.txt.imgui.build  CMakeLists.txt.imgui.in  CMakeLists.txt.in  CMakeLists.txt.island_epilog.in  CMakeLists.txt.island_prolog.in  CMakeLists.txt.rename_artifact.in  LICENSE.md  README.md  README_HINTS.md  README_WINDOWS.md  README_hotreload_debugging.md  hot-reload.ps1  legacy_sdk_installation_instructions.md  main  main.cpp  main.cpp.autosave  plan.md  todo.md
accum/: CMakeLists.txt  accumulator.cpp  accumulator.h
apps/test_lensflare/: CMakeLists.txt  main.cpp
apps/test_lensflare/lensflare_app/: CMakeLists.txt  lensflare_app.cpp  lensflare_app.h
apps/test_lensflare/resources/shaders/: default.vert  lensflare.frag  lensflare.geom  lensflare.vert  rgb2hsv.glsl
file_watcher/: CMakeLists.txt  file_watcher.cpp  file_watcher.h
le_backend_vk/: CMakeLists.txt  default.vert.spv  fragment_shader.frag  fragment_shader.frag.spv  le_allocator.cpp  le_allocator_linear.cpp  le_backend_types_internal.h  le_backend_vk.cpp  le_backend_vk.h  le_device_vk.cpp  le_instance_vk.cpp  le_pipeline.cpp  le_resource.cpp  vertex_shader.vert  vertex_shader.vert.spv  vertex_shader_ext.vert.spv
le_backend_vk/private/: le_allocator.h  le_allocator_linear.h  le_backend_private.h  le_device_vk.h  le_instance_vk.h
le_bspline/: le_bspline.cpp
le_camera/: CMakeLists.txt  le_camera.cpp  le_camera.h
le_dependency_manager/: CMakeLists.txt  le_dependency_manager.cpp  le_dependency_manager.h
le_font/: CMakeLists.txt  le_font.cpp  le_font.h
le_gltf_loader/: CMakeLists.txt  le_gltf_loader.cpp  le_gltf_loader.h
le_mesh_generator/: le_mesh_generator.cpp  le_mesh_generator.h
le_path/: le_path.cpp  le_path.h
le_pipeline_builder/: CMakeLists.txt  le_pipeline_builder.cpp  le_pipeline_builder.h
le_pixels/: CMakeLists.txt  le_pixels.cpp  le_pixels.h
le_renderer/: CMakeLists.txt  le_command_buffer_encoder.cpp  le_renderer.cpp  le_renderer.h  le_renderer_resource.cpp  le_rendergraph.cpp  le_rendergraph.h  le_renderpass.cpp  le_resource.cpp  vertex_shader.vert.spv
le_renderer/private/: hash_util.h  le_command_buffer_encoder.h  le_pipeline_types.h  le_renderer_resource.h  le_renderer_types.h  le_rendergraph.h  le_renderpass.h  le_resource.h
le_shader_compiler/: CMakeLists.txt  le_shader_compiler.cpp  le_shader_compiler.h
le_swapchain_vk/: CMakeLists.txt  le_swapchain_img.cpp  le_swapchain_khr.cpp  le_swapchain_vk.cpp  le_swapchain_vk.h
le_tessellator/: CMakeLists.txt  le_tessellator.cpp  le_tessellator.h
le_ui_event/: le_ui_event.h
loader/: ApiLoader.cpp  ApiLoader.h
logger/: CMakeLists.txt  logger.cpp  logger.h
modules/le_2d/: CMakeLists.txt  le_2d.cpp  le_2d.h
modules/le_2d/shaders/: 2d_primitives.frag  2d_primitives.vert  2d_primitives_frag.h  2d_primitives_vert.h  README.md
modules/le_backend_vk/: CMakeLists.txt  le_allocator.cpp  le_backend_types_internal.h  le_backend_vk.cpp  le_backend_vk.h  le_backend_vk_settings.inl  le_device_vk.cpp  le_instance_vk.cpp  le_pipeline.cpp
modules/le_backend_vk/private/le_backend_vk/: le_backend_types_pipeline.inl  le_backend_vk_instance.inl  le_command_stream_t.h  update_vk_to_str_helpers.sh  vk_to_str_helpers.inl
modules/le_backend_vk/util/spirv-cross/: spirv_common.hpp
modules/le_backend_vk/util/spirv_reflect/: README.md  spirv_reflect.c  spirv_reflect.h
modules/le_backend_vk/util/vk_mem_alloc/: vk_mem_alloc.cpp  vk_mem_alloc.h
modules/le_camera/: CMakeLists.txt  le_camera.cpp  le_camera.h
modules/le_console/: CMakeLists.txt  le_console.cpp  le_console.h
modules/le_console/private/le_console/: le_char_tree.h  le_console_server.cpp  le_console_server.h  le_console_types.h
modules/le_core/: CMakeLists.txt  create_sled.py  hash_util.h  le_api_loader.cpp  le_api_loader.h  le_api_loader_linux.cpp  le_api_loader_win32.cpp  le_core.cpp  le_core.h  le_hash_util.h  sled.asm
modules/le_core/private/le_core/: le_settings_private_types.inl
modules/le_core/shared/interfaces/: le_image_decoder_interface.h  le_image_encoder_interface.h
modules/le_debug_print_text/: CMakeLists.txt  README.md  le_debug_print_text.cpp  le_debug_print_text.h
modules/le_debug_print_text/shaders/: debug_text_frag.h  debug_text_vert.h
modules/le_file_watcher/: CMakeLists.txt  le_file_watcher.cpp  le_file_watcher.h  le_file_watcher_linux.cpp  le_file_watcher_win32.cpp  le_tweakable.h
modules/le_font/: CMakeLists.txt  le_font.cpp  le_font.h
modules/le_gltf/: CMakeLists.txt  cgltf.c  le_gltf.cpp  le_gltf.h
modules/le_imgui/: CMakeLists.txt  CMakeLists.txt.imgui.in  imconfig.h  imgui_frag.h  imgui_vert.h  le_imgui.cpp  le_imgui.h
modules/le_imgui/shaders/: compile_shaders.sh  imgui.frag  imgui_frag.h  imgui_vert.h
modules/le_jobs/: CMakeLists.txt  le_jobs.cpp  le_jobs.h
modules/le_jobs/private/: lockfree_ring_buffer.cpp  lockfree_ring_buffer.h
modules/le_log/: CMakeLists.txt  le_log.cpp  le_log.h
modules/le_mesh/: CMakeLists.txt  le_mesh.cpp  le_mesh.h  le_mesh_ply.cpp  le_mesh_types.h
modules/le_mesh_generator/: CMakeLists.txt  le_mesh_generator.cpp  le_mesh_generator.h
modules/le_midi/: CMakeLists.txt  le_midi.cpp  le_midi.h
modules/le_parameter_store/: CMakeLists.txt  le_parameter_store.cpp  le_parameter_store.h
pal_api_loader/: ApiLoader.cpp  ApiLoader.h  ApiRegistry.cpp  ApiRegistry.hpp  CMakeLists.txt  hash_util.h
pal_backend_vk/: CMakeLists.txt  instance_vk.cpp  pal_backend_vk.cpp  pal_backend_vk.h
pal_backend_vk/private/: backend_private.h
pal_dl_audit/: CMakeLists.txt  audit.cpp
pal_file_watcher/: CMakeLists.txt  pal_file_watcher.cpp  pal_file_watcher.h  pal_tweakable.h
pal_window/: CMakeLists.txt  pal_window.cpp  pal_window.h
registry/: ApiRegistry.cpp  ApiRegistry.hpp
state_machine/: .gitignore  CMakeLists.txt  state_machine.cpp  state_machine.h
traffic_light/: CMakeLists.txt  traffic_light.cpp  traffic_light.h
(+444 files in other folders)
